[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fetch-wolfram"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "vprusso", email = "vincentrusso1@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/vprusso/fetch-wolfram#readme"
Issues = "https://github.com/vprusso/fetch-wolfram/issues"
Source = "https://github.com/vprusso/fetch-wolfram"

[tool.hatch.version]
path = "src/fetch_wolfram/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/fetch_wolfram tests}"

[tool.coverage.run]
source_pkgs = ["fetch_wolfram", "tests"]
branch = true
parallel = true
omit = [
  "src/fetch_wolfram/__about__.py",
]

[tool.coverage.paths]
fetch_wolfram = ["src/fetch_wolfram", "*/fetch-wolfram/src/fetch_wolfram"]
tests = ["tests", "*/fetch-wolfram/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
